# ipymini

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  DAP.md  DEBUG.md  DEV.md  DEVLOG.md  INSTALLER.md  MIGRATION.md  README.md  REVIEW.md  SUBSHELL.md  build.rs  chkstyle.py  ipymini_bridge.py  pyproject.toml  pytest.ini
ipymini/: __init__.py  __main__.py  bridge.py  comms.py  concur.py  debug.py  kernel.py  murmur2.py
ipymini/debug/: dap.py  flags.py  infra.py
ipymini/shell/: README.md  __init__.py  comms.py  shell.py
ipymini/term/: __init__.py  display.py  io.py  ipython_capture.py  streams.py
pytests/: kernel_utils.py  test_chkstyle.py  test_debugger_suite.py  test_gateway_interrupt.py  test_ipython_startup_integration.py  test_kernel_asyncio.py  test_kernel_basic.py  test_kernel_comm_buffers.py  test_kernel_comms.py  test_kernel_completion.py  test_kernel_completion_config.py  test_kernel_connect.py  test_kernel_debug.py  test_kernel_display.py  test_kernel_e2e.py  test_kernel_execute.py  test_kernel_extensions.py  test_kernel_heartbeat.py  test_kernel_history_inspect.py  test_kernel_info_fields.py  test_kernel_input.py  test_kernel_interrupt.py  test_kernel_iopub.py  test_kernel_minimal_behaviors.py  test_kernel_outputs.py  test_kernel_streams.py  test_kernel_subshells.py  test_kernelspec.py  test_message_headers.py
scripts/: cargo-test.sh  python_env.py
src/: main.rs  python.rs  python_bridge.py
src/core/: message.rs  (+5 more)
tests/: aclient.py  conftest.py  core_kernel_core.rs  core_message.rs  kernel_utils.py  test_debugger_suite.py  test_error_handling.py  test_gateway_client.py  test_gateway_interrupt.py  test_ipyrust_kernel.py  test_ipython_startup_integration.py  test_kernel_asyncio.py  test_kernel_basic.py  test_kernel_comm_buffers.py  test_kernel_completion.py  test_kernel_completion_config.py  test_kernel_connect.py  test_kernel_debug.py  test_kernel_display.py  test_kernel_e2e.py  test_kernel_execute.py  test_kernel_heartbeat.py  test_kernel_history_inspect.py  test_kernel_info_fields.py  test_kernel_input.py  test_kernel_interrupt.py  test_kernel_iopub.py  test_kernel_minimal_behaviors.py  test_kernel_outputs.py  test_kernel_responsiveness.py  test_kernel_streams.py  test_kernel_subshells.py  test_kernelspec.py  test_loop_cleanup.py  test_message_headers.py  test_murmur2.py  test_protocol_validation.py  test_python_stream.py  test_router_thread.py  test_streams.py
tools/: pr.sh  release.sh
(+52 files in other folders)
