[package]
name = "ipyrust"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
env_logger = "0.11"
hmac = "0.12"
hex = "0.4"
log = "0.4"
pyo3 = { version = "0.21", features = ["auto-initialize", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
zmq = "0.10"

[dev-dependencies]
assert_cmd = "2"
