[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipymini"
dynamic = ["version"]
description = "A small, readable, Python-only Jupyter kernel with strong IPython parity."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "comm>=0.2.3",
  "fastcore>=1.5",
  "ipython>=8.18",
  "jupyter_client>=8.6",
  "jupyter_core>=5.5",
  "microio>=0.1.2",
  "pyzmq>=25.1",
]

[project.optional-dependencies]
test = [
  "pytest>=7.4",
  "matplotlib>=3.8",
  "ipykernel>=6.29",
  "debugpy>=1.8",
  "murmurhash2",
]
dev = [
  "pytest>=7.4",
  "matplotlib>=3.8",
  "ipykernel>=6.29",
  "debugpy>=1.8",
  "murmurhash2",
  "fastship",
  "build",
  "twine",
]

[project.scripts]
ipymini = "ipymini.__main__:main"

[tool.setuptools.dynamic]
version = { attr = "ipymini.__version__" }

[tool.setuptools.packages.find]
include = ["ipymini", "ipymini.*"]

[tool.setuptools.data-files]
"share/jupyter/kernels/ipymini" = ["share/jupyter/kernels/ipymini/kernel.json"]

[tool.chkstyle]
skip-folder-re = "meta"
